# scheduling_project

./: CMakeLists.txt  ColorShift.cpp  ColorShift.hpp  IlsOptimizer.cpp  IlsOptimizer.hpp  InitialSolver.cpp  InitialSolver.hpp  NiloSearch.cpp  NiloSearch.hpp  OptimalSolver.cpp  OptimalSolver.hpp  Plotting.ipynb  README.md  Solution.cpp  Solution.hpp  TimeController.cpp  TimeController.hpp  Utility.cpp  Utility.hpp  Utility2.hpp  graphw.hpp  main.cpp  rd.cpp  rd.hpp  trolley.cpp  trolley.h
Ils/: IlsOptimizer.cpp  IlsOptimizer.hpp
InitialSolver/: InitialSolver.cpp
LocalSearch/: LsSolver.cpp  LsSolver.hpp
LocalSearchGroup/: LocalSearch.cpp  LocalSearch.hpp
Perturbator/: Perturbator.cpp  Perturbator.hpp  Utility2.hpp
Solution/: Solution.cpp  Solution.hpp  Utility.hpp
___Old_codes/: NiloSearch.cpp  NiloSearch.hpp  OptimalSolver.cpp
___Old_codes/LocalSearchGroup/: LocalSearch.cpp  LocalSearch.hpp
___Old_codes/kempegroup/: Kempe.hpp
___Old_codes/tabugroup/: Tabu.hpp
___Tester/: Tester.py  Tolleranze.txt
___Tester/MyCalculatePenalty/: MyCalculatePenalty.cpp  Solution.cpp  Solution.hpp  rd.hpp
kempegroup/: Kempe.cpp  Kempe.hpp
sagroup/: SA.cpp  SA.hpp
tabugroup/: Tabu.cpp  Tabu.hpp
